--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body.playing #audio-controls{opacity:1;transform:translateX(-50%) translateY(0)}
 <div class="discord-wrapper">
 <div class="discord-box">
 <a class="discord-icon" href="https://discordapp.com/users/151014356476362752" target="_blank" rel="noopener">
-<img src="https://r2.guns.lol/147cf449-399d-4408-b008-f07f093c5448.webp">
+<img src="https://github.com/jujuexe/Juju-wtf/blob/main/4a44bb2df7ea0e09d051abb06f471a5f.webp?raw=true">
 </a>
 </div>
 <div class="discord-tooltip">add me on discord</div>
@@ -84,3 +84,4 @@ setTimeout(()=>d.remove(),500)
 </script>
 </body>
 </html>
+
