--- a/index.html
+++ b/index.html
@@ -22,11 +22,58 @@ body.playing .container{opacity:1;transform:translate(-50%,-50%) scale(1)}
 .bounce{animation:bounce 2s ease-in-out infinite;text-shadow:0 0 12px var(--b),0 0 30px var(--b)}
 .title{font-size:2.1rem;letter-spacing:.12rem}
 @keyframes bounce{0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
-.discord-wrapper{margin-top:28px;position:relative}
-.discord-icon svg{width:38px;height:38px;cursor:pointer;fill:#fff;filter:drop-shadow(0 0 10px rgba(77,163,255,.9)) drop-shadow(0 0 26px rgba(77,163,255,.7));transition:transform .2s ease,filter .2s ease}
-.discord-icon:hover svg{transform:scale(1.15);filter:drop-shadow(0 0 14px rgba(120,190,255,1)) drop-shadow(0 0 36px rgba(120,190,255,.95))}
-.discord-tooltip{position:absolute;bottom:-34px;background:rgba(0,0,0,.9);color:#9ecbff;font-size:12px;padding:6px 10px;border-radius:6px;white-space:nowrap;opacity:0;pointer-events:none;transform:translateY(-4px);transition:opacity .2s ease,transform .2s ease}
-.discord-wrapper:hover .discord-tooltip{opacity:1;transform:translateY(0)}
+
+.discord-wrapper{
+  margin-top:32px;
+  position:relative;
+}
+
+.discord-icon{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  transform:translateY(4px);
+}
+
+.discord-icon svg{
+  width:40px;
+  height:40px;
+  fill:#fff;
+  cursor:pointer;
+  filter:
+    drop-shadow(0 0 10px rgba(77,163,255,.9))
+    drop-shadow(0 0 26px rgba(77,163,255,.7));
+  transition:transform .2s ease,filter .2s ease;
+}
+
+.discord-icon:hover svg{
+  transform:scale(1.15);
+  filter:
+    drop-shadow(0 0 14px rgba(120,190,255,1))
+    drop-shadow(0 0 36px rgba(120,190,255,.95));
+}
+
+.discord-tooltip{
+  position:absolute;
+  top:-36px;
+  left:50%;
+  transform:translateX(-50%) translateY(4px);
+  background:rgba(0,0,0,.9);
+  color:#9ecbff;
+  font-size:12px;
+  padding:6px 10px;
+  border-radius:6px;
+  white-space:nowrap;
+  opacity:0;
+  pointer-events:none;
+  transition:opacity .2s ease,transform .2s ease;
+}
+
+.discord-wrapper:hover .discord-tooltip{
+  opacity:1;
+  transform:translateX(-50%) translateY(0);
+}
+
 #audio-controls{position:absolute;bottom:22px;left:50%;transform:translateX(-50%) translateY(20px);background:rgba(0,0,0,.65);padding:12px 18px;border-radius:14px;box-shadow:0 0 35px var(--b);display:flex;flex-direction:column;align-items:center;gap:8px;opacity:0;transition:opacity 1.2s ease,transform 1.2s ease}
 body.playing #audio-controls{opacity:1;transform:translateX(-50%) translateY(0)}
 .now-playing{text-shadow:0 0 12px var(--b),0 0 30px var(--b)}
@@ -52,13 +99,12 @@ body.playing #audio-controls{opacity:1;transform:translateX(-50%) translateY(0)}
 <div class="title bounce">JuJu.wtf</div>
 
 <div class="discord-wrapper">
+<div class="discord-tooltip">add me on discord</div>
 <a class="discord-icon" href="https://discordapp.com/users/151014356476362752" target="_blank" rel="noopener">
-<svg viewBox="0 0 245 240" xmlns="http://www.w3.org/2000/svg">
-<path d="M104.4 104.9c-5.7 0-10.2 5-10.2 11.1 0 6.1 4.6 11.1 10.2 11.1 5.7 0 10.2-5 10.2-11.1 0-6.1-4.5-11.1-10.2-11.1zm36.2 0c-5.7 0-10.2 5-10.2 11.1 0 6.1 4.6 11.1 10.2 11.1 5.7 0 10.2-5 10.2-11.1 0-6.1-4.5-11.1-10.2-11.1z"/>
-<path d="M189.5 20h-134C24.5 20 10 34.5 10 52.5v135c0 18 14.5 32.5 32.5 32.5h113l-5.3-18.5 12.8 11.9 12.1 11.2 21.5 19V52.5c0-18-14.5-32.5-32.6-32.5zm-39.7 130s-3.7-4.4-6.8-8.3c13.5-3.8 18.6-12.2 18.6-12.2-4.2 2.8-8.2 4.8-11.8 6.2-5.1 2.1-10 3.5-14.8 4.3-9.8 1.8-18.8 1.3-26.5-.1-5.8-1.1-10.8-2.6-15-4.3-2.4-.9-5-2-7.6-3.4-.3-.2-.6-.3-.9-.5-.2-.1-.3-.2-.4-.3-1.8-1-2.8-1.7-2.8-1.7s4.9 8.2 17.9 12.1c-3.1 3.9-6.9 8.6-6.9 8.6-22.8-.7-31.5-15.7-31.5-15.7 0-33.3 14.9-60.3 14.9-60.3 14.9-11.2 29-10.9 29-10.9l1 1.2c-18.6 5.4-27.2 13.6-27.2 13.6s2.3-1.3 6.1-3.1c11-4.8 19.7-6.1 23.3-6.4.6-.1 1.1-.2 1.7-.2 6-.8 12.8-1 19.9-.2 9.4 1.1 19.5 3.9 29.7 9.9 0 0-8.2-7.8-26-13.2l1.4-1.6s14.1-.3 29 10.9c0 0 14.9 27 14.9 60.3 0 0-8.8 15-31.6 15.7z"/>
+<svg viewBox="0 0 256 199" xmlns="http://www.w3.org/2000/svg">
+<path d="M216.856 16.597c-16.055-7.18-33.278-12.43-51.264-15.597-2.463 4.4-5.263 10.312-7.213 14.983-19.26-2.89-38.376-2.89-57.273 0-1.95-4.67-4.84-10.583-7.33-14.983-17.995 3.167-35.235 8.417-51.3 15.607C7.21 68.112-3.11 119.33 2.558 169.8c23.673 17.69 46.558 28.447 68.19 35.533 5.507-7.507 10.406-15.47 14.764-23.93-8.07-3.07-15.76-6.84-22.99-11.18 1.93-1.44 3.82-2.94 5.65-4.49 44.31 20.7 92.65 20.7 136.43 0 1.84 1.55 3.73 3.05 5.66 4.49-7.23 4.34-14.93 8.11-23.01 11.18 4.36 8.46 9.26 16.42 14.77 23.93 21.64-7.09 44.53-17.84 68.19-35.54 6.66-58.12-11.36-109.28-40.04-153.2ZM85.473 135.99c-13.2 0-24.06-12.13-24.06-27.05 0-14.92 10.63-27.06 24.06-27.06 13.43 0 24.29 12.14 24.06 27.06 0 14.92-10.63 27.05-24.06 27.05Zm85.054 0c-13.2 0-24.06-12.13-24.06-27.05 0-14.92 10.63-27.06 24.06-27.06 13.43 0 24.29 12.14 24.06 27.06 0 14.92-10.63 27.05-24.06 27.05Z"/>
 </svg>
 </a>
-<div class="discord-tooltip">add me on discord</div>
 </div>
 </div>
 
