Refactor index.html for improved layout and styles
Updated the HTML structure and styles for better layout and functionality.

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@ body.playing .container{opacity:1;transform:translate(-50%,-50%) scale(1)}
 }
 
 .discord-icon{
+  width:48px;
+  height:48px;
   display:flex;
   align-items:center;
   justify-content:center;
+  overflow:visible;
   transform:translateY(4px);
 }
 
@@ -40,6 +43,7 @@ body.playing .container{opacity:1;transform:translate(-50%,-50%) scale(1)}
   height:40px;
   fill:#fff;
   cursor:pointer;
+  overflow:visible;
   filter:
     drop-shadow(0 0 10px rgba(77,163,255,.9))
     drop-shadow(0 0 26px rgba(77,163,255,.7));
