--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@ body.playing .container{opacity:1;transform:translate(-50%,-50%) scale(1)}
   display:flex;
   align-items:center;
   justify-content:center;
-  overflow:visible;
   transform:translateY(4px);
 }
 
@@ -43,7 +42,6 @@ body.playing .container{opacity:1;transform:translate(-50%,-50%) scale(1)}
   height:40px;
   fill:#fff;
   cursor:pointer;
-  overflow:visible;
   filter:
     drop-shadow(0 0 10px rgba(77,163,255,.9))
     drop-shadow(0 0 26px rgba(77,163,255,.7));
@@ -105,8 +103,8 @@ body.playing #audio-controls{opacity:1;transform:translateX(-50%) translateY(0)}
 <div class="discord-wrapper">
 <div class="discord-tooltip">add me on discord</div>
 <a class="discord-icon" href="https://discordapp.com/users/151014356476362752" target="_blank" rel="noopener">
-<svg viewBox="0 0 256 199" xmlns="http://www.w3.org/2000/svg">
-<path d="M216.856 16.597c-16.055-7.18-33.278-12.43-51.264-15.597-2.463 4.4-5.263 10.312-7.213 14.983-19.26-2.89-38.376-2.89-57.273 0-1.95-4.67-4.84-10.583-7.33-14.983-17.995 3.167-35.235 8.417-51.3 15.607C7.21 68.112-3.11 119.33 2.558 169.8c23.673 17.69 46.558 28.447 68.19 35.533 5.507-7.507 10.406-15.47 14.764-23.93-8.07-3.07-15.76-6.84-22.99-11.18 1.93-1.44 3.82-2.94 5.65-4.49 44.31 20.7 92.65 20.7 136.43 0 1.84 1.55 3.73 3.05 5.66 4.49-7.23 4.34-14.93 8.11-23.01 11.18 4.36 8.46 9.26 16.42 14.77 23.93 21.64-7.09 44.53-17.84 68.19-35.54 6.66-58.12-11.36-109.28-40.04-153.2ZM85.473 135.99c-13.2 0-24.06-12.13-24.06-27.05 0-14.92 10.63-27.06 24.06-27.06 13.43 0 24.29 12.14 24.06 27.06 0 14.92-10.63 27.05-24.06 27.05Zm85.054 0c-13.2 0-24.06-12.13-24.06-27.05 0-14.92 10.63-27.06 24.06-27.06 13.43 0 24.29 12.14 24.06 27.06 0 14.92-10.63 27.05-24.06 27.05Z"/>
+<svg viewBox="0 0 127.14 96.36" xmlns="http://www.w3.org/2000/svg">
+<path d="M107.7 8.07A105.15 105.15 0 0 0 81.47 0a72.06 72.06 0 0 0-3.36 6.83 97.68 97.68 0 0 0-29.22 0A72.37 72.37 0 0 0 45.53 0a105.89 105.89 0 0 0-26.27 8.09C2.79 32.65-1.71 56.6.54 80.21a105.73 105.73 0 0 0 32.17 16.15 77.7 77.7 0 0 0 6.89-11.11 68.42 68.42 0 0 1-10.85-5.18c.91-.66 1.8-1.35 2.66-2.06 20.87 9.78 43.55 9.78 64.17 0 .87.71 1.76 1.4 2.66 2.06a68.68 68.68 0 0 1-10.87 5.19 77 77 0 0 0 6.89 11.1A105.25 105.25 0 0 0 126.6 80.2c2.64-27.57-4.53-51.3-18.9-72.13ZM42.45 65.69c-6.28 0-11.45-5.75-11.45-12.8 0-7.06 5.1-12.81 11.45-12.81s11.48 5.75 11.45 12.81c0 7.05-5.1 12.8-11.45 12.8Zm42.24 0c-6.28 0-11.45-5.75-11.45-12.8 0-7.06 5.1-12.81 11.45-12.81s11.48 5.75 11.45 12.81c0 7.05-5.1 12.8-11.45 12.8Z"/>
 </svg>
 </a>
 </div>
