--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ body.playing #audio-controls{opacity:1;transform:translateX(-50%) translateY(0)}
 </div>
 
 <video id="background-video" loop playsinline>
-<source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/Freestyle%20(1).mp4" type="video/mp4">
+<source src="https://github.com/jujuexe/Juju-wtf/raw/refs/heads/main/charlie%20murder.mp4" type="video/mp4">
 </video>
 
 <div class="container">
@@ -111,7 +111,7 @@ body.playing #audio-controls{opacity:1;transform:translateX(-50%) translateY(0)}
 </div>
 
 <div id="audio-controls">
-<div class="now-playing">Now Playing: Freestyle</div>
+<div class="now-playing">Now Playing: CHARLIE MURDER</div>
 <button id="pause-button">Pause ⏯</button>
 </div>
 
@@ -136,3 +136,4 @@ setTimeout(()=>d.remove(),500)
 
 </body>
 </html>
+
